--- a/Kettlebel/web/coaching.html
+++ b/Kettlebel/web/coaching.html
@@ -36,52 +36,51 @@
       </div>
     </div>
   </nav>
+  <div id="kedvcsinalo">
+    <a class="anchor" id="ismerteto"></a>
 
-  <a href="glorius.html">
-    <div class="containerc">
-      <div class="cardc card0c">
-        <div class="borderc">
-          <h2>Online Kurzus</h2>
-          <div class="iconsc">
-            <i class="fac fac-codepen" aria-hidden="true"></i>
-            <i class="fac fac-instagram" aria-hidden="true"></i>
-            <i class="fac fac-dribbble" aria-hidden="true"></i>
-            <i class="fac fac-twitter" aria-hidden="true"></i>
-            <i class="fac fac-facebook" aria-hidden="true"></i>
+    <section>
+      <div class="container2">
+        <div class="row align-items-center">
+          <div class="col-lg-6">
+            <div class="p-5">
+              <img src="assets/kepek/Fejben az erő_.png" alt="" class="img-fluid rounded-circle">
+              <!-- kép helye: "pavel"-->
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="p-5">
+              <h1 class="display-4" id="coach">Online coaching</h1>
+              <p>
+                <span class="szerep2">„Fejben az erő”</span> címmel minden héten szombaton online coaching szolgáltatást
+                is nyújtunk,
+                ahol egy videóhívás keretében osztjuk meg az önfejlesztés útján szerzett tapasztalatainkat,
+                rávilágítunk a gondolatok fontosságára és hasznos tippeket adunk gyakorlati példákkal
+                alátámasztva, hogy a mentális erőddel minden akadályt képes légy ledönteni.
+              </p>
+              <p>Az interaktív
+                beszélgetésekben megoszthatod velünk nehézségeidet vagy kérdéseidet, mi pedig megoldást
+                biztosítunk, hogy elérd a hőn áhított céljaidat. Amint megváltoztatod a gondolataid és
+                hozzáállásod, az élet pozitív megerősítéseket küld feléd és jelzi, hogy rátértél a helyes útra.
+                Mi segítünk, hogy megtaláld magadban a válaszokat!</p>
+            </div>
           </div>
         </div>
       </div>
-  </a>
-    <a href="coaching.html">
-      <div class="cardc card1c">
-        <div class="borderc">
-          <h2>Online Coaching</h2>
-          <div class="iconscc">
-            <i class="fac fac-codepen" aria-hidden="true"></i>
-            <i class="fac fac-instagram" aria-hidden="true"></i>
-            <i class="fac fac-dribbble" aria-hidden="true"></i>
-            <i class="fac fac-twitter" aria-hidden="true"></i>
-            <i class="fac fac-facebook" aria-hidden="true"></i>
-          </div>
-        </div>
-      </div>
-    </a>
-    <a href="edzéstervek.html">
-      <div class="cardc card2c">
-        <div class="borderc">
-          <h2>Edzéstervek</h2>
-          <div class="iconsc">
-            <i class="fa fa-codepen" aria-hidden="true"></i>
-            <i class="fa fa-instagram" aria-hidden="true"></i>
-            <i class="fa fa-dribbble" aria-hidden="true"></i>
-            <i class="fa fa-twitter" aria-hidden="true"></i>
-            <i class="fa fa-facebook" aria-hidden="true"></i>
-          </div>
-        </div>
-      </div>
-        </div>
-    </a>
+    </section>
 
+
+  </div>
+
+      <!-- Footer -->
+      <footer class="py-5 bg-black">
+  
+  
+        <!-- <div class="container2">
+          <p class="m-0 text-center text-white small text-uppercase container2">Three For Glory - Minden válasz benned
+            van!</p>
+        </div> -->
+      </footer>
 
   <!-- Bootstrap kötelező elemek sorrendben -->
   <script src="assets/jquery/jquery-3.3.1.min.js"></script>
