--- a/Kettlebel/web/edzéstervek.html
+++ b/Kettlebel/web/edzéstervek.html
@@ -37,51 +37,46 @@
     </div>
   </nav>
 
-  <a href="glorius.html">
-    <div class="containerc">
-      <div class="cardc card0c">
-        <div class="borderc">
-          <h2>Online Kurzus</h2>
-          <div class="iconsc">
-            <i class="fac fac-codepen" aria-hidden="true"></i>
-            <i class="fac fac-instagram" aria-hidden="true"></i>
-            <i class="fac fac-dribbble" aria-hidden="true"></i>
-            <i class="fac fac-twitter" aria-hidden="true"></i>
-            <i class="fac fac-facebook" aria-hidden="true"></i>
+    
+    <section>
+      <div class="container2">
+        <div class="row align-items-center">
+          <div class="col-lg-6 order-lg-2">
+            <div class="p-5">
+              <a href="https://discord.gg/dDQsYe3G"><img src="assets/kepek/discord_.png"
+                  title="Ugrás a Discord szerverre." class="img-fluid rounded-circle dckep"></a>
+              <!-- kép helye: "kettlebell_at_home"-->
+            </div>
+          </div>
+          <div class="col-lg-6 order-lg-1">
+            <div class="p-5">
+              <h1 class="display-4" id="dc">Discord szerverünk</h1>
+              <p>
+                Továbbá várunk szeretettel Discord szerverünkre is, ahol közösen tudunk a fejlődés irányába tartani,
+                beszélgetni az eddigi sikereitekről és segíteni eljutni a csúcsra. Célunk egy ambiciózus, sikerre éhes
+                közösség kialakítása, ahol mindenki megérzi a fejlődés örömét. Ha szeretnél egy személyre szabott
+                edzéstervet is, már nem is kell tovább keresgélned, ugyanis a szerveren ilyen szolgáltatással is várunk.
+                Megbeszéljük a részleteket és elkészítjük Neked azt a tervet, amivel elérheted az eddigi legjobb
+                formádat és hatalmas önbizalomra tehetsz szert. Találkozunk a „bajnokok klubjában”!
+              </p>
+            </div>
           </div>
         </div>
       </div>
-  </a>
-    <a href="coaching.html">
-      <div class="cardc card1c">
-        <div class="borderc">
-          <h2>Online Coaching</h2>
-          <div class="iconscc">
-            <i class="fac fac-codepen" aria-hidden="true"></i>
-            <i class="fac fac-instagram" aria-hidden="true"></i>
-            <i class="fac fac-dribbble" aria-hidden="true"></i>
-            <i class="fac fac-twitter" aria-hidden="true"></i>
-            <i class="fac fac-facebook" aria-hidden="true"></i>
-          </div>
-        </div>
-      </div>
-    </a>
-    <a href="edzéstervek.html">
-      <div class="cardc card2c">
-        <div class="borderc">
-          <h2>Edzéstervek</h2>
-          <div class="iconsc">
-            <i class="fa fa-codepen" aria-hidden="true"></i>
-            <i class="fa fa-instagram" aria-hidden="true"></i>
-            <i class="fa fa-dribbble" aria-hidden="true"></i>
-            <i class="fa fa-twitter" aria-hidden="true"></i>
-            <i class="fa fa-facebook" aria-hidden="true"></i>
-          </div>
-        </div>
-      </div>
-        </div>
-    </a>
+    </section>
+  </div>
 
+  
+
+      <!-- Footer -->
+      <footer class="py-5 bg-black">
+  
+  
+        <!-- <div class="container2">
+          <p class="m-0 text-center text-white small text-uppercase container2">Three For Glory - Minden válasz benned
+            van!</p>
+        </div> -->
+      </footer>
 
   <!-- Bootstrap kötelező elemek sorrendben -->
   <script src="assets/jquery/jquery-3.3.1.min.js"></script>
